--- a/tests/index.html
+++ b/tests/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <div id="grid"></div>
+        <div id="legend"></div>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="index.js"></script>
     </body>
